Bug 446469 - Missing busy state change event when downloading files, r=tbsaunde